--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/edit_txt_bg"
-        android:hint="Mobile number"
+        android:hint="Password"
         android:minHeight="48dp"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/edit_txt_bg"
-        android:hint="Mobile number"
+        android:hint="ConfirmPassword"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
